--- a/HPP/src/main/webapp/WEB-INF/web.xml
+++ b/HPP/src/main/webapp/WEB-INF/web.xml
@@ -8,11 +8,48 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
+	<!-- log4j2 시작 -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/log4j2</param-value>
 	</context-param>
+	<!-- log4j2 끝 -->
 
+	<!-- Filter 시작 -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+
+	<filter>
+	    <filter-name>HTMLTagFilter</filter-name>
+	    <filter-class>com.ksm.hpp.framework.filter.HTMLTagFilter</filter-class>
+	    <init-param>
+	    	<param-name>excludePatterns</param-name>
+	    	<param-value>
+	    	</param-value>
+	    </init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>	
+	<filter-mapping>
+	    <filter-name>HTMLTagFilter</filter-name>
+	    <url-pattern>*.do</url-pattern>
+	</filter-mapping>	
+	<!-- Filter 끝 -->
+	
+	<!-- dispatcherServlet 시작 -->
 	<servlet>
 		<servlet-name>dispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -26,22 +63,5 @@
 		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern><!-- 모든 패턴의 요청이 dispatcherServlet을 통과하도록 한다 -->
 	</servlet-mapping>
-
-	<filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
+	<!-- dispatcherServlet 끝 -->	
 </web-app>
